--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "googleapis": "^144.0.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
