--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@types/css-modules": "^1.0.5",
     "@types/react-slick": "^0.23.13",
     "@types/webpack-env": "^1.18.5"
