--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fit-bstu",
-  "version": "0.1.0",
+  "version": "0.5",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
@@ -30,6 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node ./src/server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
