--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fit-bstu",
   "version": "0.5",
+  "homepage": "https://bubblechuk.github.io/fit-bstu",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
@@ -33,7 +34,9 @@
     "server": "node ./src/server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +60,7 @@
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@types/css-modules": "^1.0.5",
     "@types/react-slick": "^0.23.13",
-    "@types/webpack-env": "^1.18.5"
+    "@types/webpack-env": "^1.18.5",
+    "gh-pages": "^6.3.0"
   }
 }
